--- a/C2ServerAPI/pyproject.toml
+++ b/C2ServerAPI/pyproject.toml
@@ -1,11 +1,8 @@
 [tool.poetry]
-name = "c2serverapi"
-version = "1.3.1"
-description = "A client for registering chivalry 2 servers to a server browser backend."
-authors = [
-    "Atom Roese <atomroese@yahoo.com>", 
-    "Jacob Barber <jacoby6000@gmail.com>"
-]
+name = "AdminDashBoard"
+version = "4.5.2.0"
+description = "A dashboard to simplify adminstrative tasks on a Chivalry 2 server."
+authors = ["OVA"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
