First commit, still work-in-progress

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,23 @@ C2ServerAPI/RegisterUnchainedServer.errorlog.txt
 C2ServerAPI/localconfig
 C2ServerAPI/AdminDashboard.spec
 /C2ServerAPI/tests
+database_config.json
+*.db
+*.sqlite
+*.sqlite3
+*.sql
+backup_*.sql
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+venv/
+env/
+ENV/
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+Thumbs.db
